force-app/main/default/objects/Growing_Field__c/Growing_Field__c.object-meta.xml
<CustomObject>
    <label>Growing Field</label>
    <nameField>
        <label>Growing Field Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Growing Fields</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>