force-app/main/default/objects/Growing_Field__c/fields/Bio__c.field-meta.xml
<CustomField>
    <fullName>Bio__c</fullName>
    <formula>Name &amp; &quot; is good for &quot; &amp; SoilType__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Bio</label>
    <type>Text</type>
</CustomField>