force-app/main/default/objects/Growing_Field__c/fields/Growing_types__c.field-meta.xml
<CustomField>
    <fullName>Growing_types__c</fullName>
    <label>Growing types</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Plant_Types</valueSetName>
    </valueSet>
</CustomField>