force-app/main/default/objects/Growing_Field__c/fields/GrowingFieldID__c.field-meta.xml
<CustomField>
    <fullName>GrowingFieldID__c</fullName>
    <displayFormat>GFID-{0000}</displayFormat>
    <label>GrowingFieldID</label>
    <type>AutoNumber</type>
</CustomField>