force-app/main/default/objects/Growing_Field__c/fields/Max_Number_of_Plant_Types__c.field-meta.xml
<CustomField>
    <fullName>Max_Number_of_Plant_Types__c</fullName>
    <label>Max Number of Plant Types</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>