force-app/main/default/objects/Growing_Field__c/fields/Plant_Capacity__c.field-meta.xml
<CustomField>
    <fullName>Plant_Capacity__c</fullName>
    <label>Plant Capacity</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>