force-app/main/default/objects/Growing_Field__c/validationRules/FieldNameValidation.validationRule-meta.xml
<ValidationRule>
    <fullName>FieldNameValidation</fullName>
    <active>true</active>
    <errorConditionFormula>Name=VLOOKUP( $ObjectType.Growing_Field__c.Fields.Name,  $ObjectType.Growing_Field__c.Fields.Name , Name)</errorConditionFormula>
    <errorMessage>Sorry. The name has already existed.</errorMessage>
</ValidationRule>